--- a/main.ipynb
+++ b/main.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "id": "cf478f90",
    "metadata": {},
    "outputs": [
@@ -148,49 +148,48 @@
      "output_type": "stream",
      "text": [
       "I can provide a high-level explanation of how VAEs work and a step-by-step guide\n",
-      "on building one.   **How VAEs Work:**  VAEs, or Variational Autoencoders, are a\n",
-      "type of generative machine learning model used for unsupervised learning tasks,\n",
-      "particularly in generating new data similar to the training data and extracting\n",
-      "valuable insights from high-dimensional data.   Here's a simplified breakdown of\n",
-      "how VAEs work:   1. **Encoding:** The VAE first encodes the input data into a\n",
-      "latent space, typically of lower dimensionality, using a neural network called\n",
-      "the encoder. This latent space represents a probabilistic distribution of the\n",
-      "input data, often assumed to follow a Gaussian distribution.   2. **Sampling:**\n",
-      "From this latent space, the VAE samples points, introducing randomness into the\n",
-      "model. This step allows the VAE to generate new data points that are similar to,\n",
-      "but not exactly the same as, the training data.   3. **Decoding:** The sampled\n",
-      "points are then passed through another neural network, the decoder, which maps\n",
-      "them back to the original input space. The decoder tries to reconstruct the\n",
-      "original input data from the latent representation.   4. **Optimization:** The\n",
-      "VAE is trained by optimizing two objectives:      - **Reconstruction Loss:**\n",
-      "This measures how well the VAE can reconstruct the input data and is typically\n",
-      "measured using a distance metric like mean squared error or cross-entropy loss.\n",
-      "- **Kullback-Leibler (KL) Divergence:** This term measures the difference\n",
-      "between the latent space distribution and the prior distribution, which is often\n",
-      "assumed to be a standard Gaussian. This term encourages the latent space to\n",
-      "follow a simple distribution, making the generation of new data easier.\n",
-      "**Building a VAE:**  Here's a step-by-step guide on how one might go about\n",
-      "building a basic VAE:   1. **Define the Data:** Start by understanding the data\n",
-      "you want to model. Ensure it is suitable for unsupervised learning and that you\n",
-      "have a sufficient amount of it.   2. **Choose a Network Architecture:** Decide\n",
-      "on the structure of your encoder and decoder networks. The encoder should map\n",
-      "the input data to a latent space, and the decoder should map the latent space\n",
-      "back to the original input space.   3. **Define the Loss Function:** Implement\n",
-      "the loss function, which consists of the reconstruction loss and the KL\n",
-      "divergence term. You may also include additional regularization terms depending\n",
-      "on your specific task.   4. **Train the Model:** Use your chosen optimization\n",
-      "algorithm (e.g., stochastic gradient descent) to update the weights of the\n",
-      "encoder and decoder networks to minimize the loss function.   5. **Evaluate and\n",
-      "Tweak:** After training, evaluate the model's performance using appropriate\n",
-      "metrics. You may need to adjust the network architecture, hyperparameters, or\n",
-      "training data to improve performance.   6. **Generate New Data:** Once you're\n",
-      "satisfied with your model's performance, you can use it to generate new data by\n",
-      "sampling from the latent space and passing the samples through the decoder.   7.\n",
-      "**Explore Advanced Techniques:** Depending on your specific task, you may want\n",
-      "to explore more advanced VAE techniques, such as using multiple latent\n",
-      "variables, incorporating domain knowledge, or applying VAE to time series data.\n",
-      "Remember that building a VAE often involves experimentation and iteration to\n",
-      "find the right architecture and hyperparameters for your specific data and task.\n"
+      "on building one.   **How VAEs Work:**  VAEs (Variational Autoencoders) are a\n",
+      "type of generative model that can learn to generate new data similar to the\n",
+      "training data. They do this by learning a probability distribution that captures\n",
+      "the underlying patterns in the data. Here's a simplified step-by-step\n",
+      "explanation:  1. **Encoding:** The VAE first encodes the input data x into a\n",
+      "latent representation z using an encoder network qφ(z|x). This latent space z is\n",
+      "typically of lower dimension than the input space, and it captures the most\n",
+      "important features of the data.  2. **Sampling:** The VAE then samples new data\n",
+      "points from the latent space z. This is done by using a prior distribution\n",
+      "pθ(z), which is often a simple distribution like a spherical Gaussian.  3.\n",
+      "**Decoding:** The sampled latent vectors z are then passed through a decoder\n",
+      "network pθ(x|z), which generates new data points x' that resemble the training\n",
+      "data. The decoder tries to reconstruct the original input data from the latent\n",
+      "representation.  4. **Loss Function:** The VAE is trained using a loss function\n",
+      "that has two main components:     a. **Reconstruction Loss:** This measures how\n",
+      "well the VAE can reconstruct the original input data x from the latent\n",
+      "representation z. It encourages the decoder to generate data that looks like the\n",
+      "training data.     b. **Kullback-Leibler (KL) Divergence:** This term acts as a\n",
+      "regularizer and encourages the distribution of the latent space qφ(z|x) to be\n",
+      "similar to the prior distribution pθ(z). This helps in avoiding overfitting and\n",
+      "keeps the latent space smooth and continuous.   **Building a VAE:**  Here's a\n",
+      "step-by-step guide on how one might go about building a VAE:  1. **Define the\n",
+      "Model Architecture:** Decide on the structure of your encoder and decoder\n",
+      "networks. The encoder takes the input data x and outputs the parameters of the\n",
+      "latent distribution qφ(z|x). The decoder takes samples from the latent\n",
+      "distribution and outputs the generated data x'.  2. **Choose the Prior\n",
+      "Distribution:** Select a suitable prior distribution pθ(z) for the latent space.\n",
+      "A common choice is a standard Gaussian distribution.  3. **Define the Loss\n",
+      "Function:** Implement the VAE loss function, which includes the reconstruction\n",
+      "loss and the KL divergence term.  4. **Train the Model:** Use a suitable dataset\n",
+      "to train the VAE. During training, the encoder and decoder networks learn to\n",
+      "optimize the loss function. This is typically done using gradient descent and\n",
+      "backpropagation.  5. **Sample and Generate:** After training, you can use the\n",
+      "encoder to map new data points to the latent space and then sample from this\n",
+      "latent space to generate new, similar data points using the decoder.  6.\n",
+      "**Evaluate and Tweak:** Evaluate the quality of the generated data using\n",
+      "appropriate metrics and visualizations. You may need to adjust the model\n",
+      "architecture, hyperparameters, or training data to improve the results.\n",
+      "Remember that this is a simplified explanation, and building a successful VAE\n",
+      "often involves a lot of experimentation and fine-tuning. The specific\n",
+      "implementation details can vary depending on the programming language and\n",
+      "libraries you use.\n"
      ]
     }
    ],
