Updated comments and a different cell to add questions

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 111,
    "id": "b1124100-d365-4627-81da-2bafc22384bf",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "id": "134789ef",
    "metadata": {},
    "outputs": [],
@@ -30,29 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "id": "402ba272",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/msrivas/hack/ai/talk2doc/docs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cohere API key\n",
     "API_KEY = os.environ.get(\"API_KEY\")\n",
     "# input doc directory\n",
-    "input_dir_name = os.environ.get(\"DIR\")\n",
-    "print(input_dir_name)"
+    "input_dir_name = os.environ.get(\"DIR\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "id": "f62f3804",
    "metadata": {},
    "outputs": [],
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "id": "136ac929",
    "metadata": {},
    "outputs": [],
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "id": "ceebfd85",
    "metadata": {},
    "outputs": [],
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "id": "45912a4d",
    "metadata": {},
    "outputs": [],
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "id": "1907cc00",
    "metadata": {},
    "outputs": [],
@@ -133,7 +124,27 @@
     "\n",
     "qa_prompt_tmpl = PromptTemplate(qa_prompt_tmpl_str)\n",
     "query_engine.update_prompts({\"response_synthesizer:text_qa_template\": qa_prompt_tmpl})\n",
-    "question = 'explain do VAE\\'s work in detail. Explain in steps how one would go about building a VAE'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "4f0dadbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INSERT QUESTION HERE \n",
+    "question = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "c6e6ed0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "response = query_engine.query(question)"
    ]
   },
@@ -149,14 +160,6 @@
     "wrapped_text = textwrap.fill(str(response), width=80)\n",
     "print(wrapped_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e4f8bfc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
